--- a/css/style.css
+++ b/css/style.css
@@ -49,16 +49,17 @@ ul {
       margin-left: 10px;
       color: #404040; }
   .accueil__titre {
-    width: 50%;
+    width: 60%;
     font-size: 14px;
     position: relative;
     left: 50%;
     transform: translate(-50%); }
     .accueil__titre > h1 {
-      font-family: Shrikhand, sans-serif; }
+      font-family: Shrikhand, sans-serif;
+      font-size: 20px; }
   .accueil__soustitre {
-    width: 60%;
-    font-size: 12px;
+    width: 80%;
+    font-size: 10px;
     position: relative;
     left: 50%;
     transform: translate(-50%); }
@@ -68,8 +69,9 @@ ul {
 .accueil__btn {
   width: 50%;
   height: 40px;
-  border: 2px solid #ff2dc5;
+  border: 1px solid #bc95e9;
   background-color: #ff2dc5;
+  box-shadow: 0 12px 16px rgba(0, 0, 0, 0.04);
   border-radius: 20px/20px; }
 
 nav {
@@ -77,13 +79,16 @@ nav {
 
 .nav__btn {
   width: 70%;
-  height: 40px;
+  height: 50px;
+  margin-bottom: 20px;
   border-radius: 10px/10px;
   text-align: center;
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
   background-color: #FFFFFF; }
   .nav__btn span {
-    margin-left: 20px; }
+    margin-left: 20px;
+    font-size: 14px;
+    font-weight: bold; }
 
 .container-card {
   width: 100%;
@@ -121,5 +126,28 @@ nav {
   .cardbody p {
     font-size: 12px;
     padding-left: 5px; }
+
+.fpage {
+  width: 100%;
+  height: 200px;
+  background: #333333;
+  margin-bottom: 20px;
+  text-align: left;
+  line-height: 1; }
+  .fpage .titre {
+    margin-left: 8%;
+    padding-top: 5px;
+    font-size: 14px;
+    color: #FFFFFF; }
+  .fpage .__links {
+    color: #FFFFFF;
+    font-size: 12px; }
+
+.links {
+  margin-bottom: 10px; }
+  .links i {
+    margin-right: 15px; }
+  .links a {
+    color: #FFFFFF; }
 
 /*# sourceMappingURL=style.css.map */
