--- a/public/styles.scss
+++ b/public/styles.scss
@@ -69,19 +69,20 @@ $background_menu: #F2F2F2;
     
     }  
     &__titre {
-        width: 50%;
+        width: 60%;
         font-size: 14px;
         position: relative;
         left: 50%;
         transform: translate(-50%);
         & > h1{
             font-family: $polices-titres;
+            font-size: 20px;
         }
 
     }
     &__soustitre{
-        width: 60%;
-        font-size: 12px;
+        width: 80%;
+        font-size: 10px;
         position: relative;
         left: 50%;
         transform: translate(-50%);
@@ -95,8 +96,10 @@ $background_menu: #F2F2F2;
 .accueil__btn{
             width: 50%;
             height: 40px;
-            border: 2px solid darken($color-secondaire,15%);
+            border: 1px solid lighten($color-primaire,15%);
             background-color: darken($color-secondaire, 15%);
+           
+            box-shadow:  0 12px 16px  rgba(0, 0, 0, 0.04);
             border-radius: 20px/20px;
 
 }
@@ -106,13 +109,18 @@ nav{
 .nav__btn
 {
     width: 70%;
-    height: 40px;
+    height: 50px;
+    margin-bottom: 20px;
     border-radius: 10px/10px;
     text-align: center;
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15 );
     background-color: #FFFFFF;
-    span{margin-left: 20px;}
-    
+    span
+    {margin-left: 20px;
+         font-size: 14px;
+        font-weight: bold;
+    }
+   
 }
 
 .container-card
@@ -137,7 +145,7 @@ nav{
     text-align: justify;
     transition: all 0.25s;
     line-height: 0;
-     
+    
 }
 .card-rest img
 {
@@ -160,4 +168,36 @@ nav{
         font-size: 12px;
         padding-left: 5px;
     }
+}
+.fpage
+{
+    width: 100%;
+    height: 200px;
+    background: lighten(#000000, 20%);
+    margin-bottom: 20px;
+    text-align: left;
+    line-height: 1;
+    .titre{
+        margin-left: 8%;
+        padding-top: 5px;
+        font-size: 14px;
+        color: #FFFFFF;
+    }
+    .__links{
+    color: #FFFFFF;
+    font-size: 12px;
+    }
+}
+
+.links{
+    margin-bottom: 10px;
+    i{
+        margin-right: 15px;
+    }
+
+    a{
+        color: #FFFFFF;
+        
+    }
+  
 }
