--- a/css/style.css
+++ b/css/style.css
@@ -74,21 +74,41 @@ ul {
   box-shadow: 0 12px 16px rgba(0, 0, 0, 0.04);
   border-radius: 20px/20px; }
 
-nav {
+.nav {
   width: 100%; }
 
 .nav__btn {
   width: 70%;
-  height: 50px;
+  height: 70px;
   margin-bottom: 20px;
-  border-radius: 10px/10px;
+  border: 0 solid #404040;
+  border-radius: 15px/15px;
   text-align: center;
-  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.15);
-  background-color: #FFFFFF; }
+  box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2);
+  background-color: #f7f7f7;
+  position: relative;
+  left: 35%;
+  transform: translate(-35%);
+  z-index: -1; }
   .nav__btn span {
     margin-left: 20px;
     font-size: 14px;
     font-weight: bold; }
+  .nav__btn--i {
+    color: #FFFFFF;
+    font-size: 10px;
+    text-align: center;
+    border: 1px #9356DC solid;
+    background-color: #9356DC;
+    width: 20px;
+    height: 15px;
+    padding-top: 5px;
+    border-radius: 50%;
+    position: relative;
+    left: 50px;
+    bottom: 2px; }
+  .nav__btn--icon {
+    color: gray; }
 
 .container-card {
   width: 100%;
@@ -96,7 +116,7 @@ nav {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center; }
+  align-items: flex-start; }
 
 .card-rest {
   width: 90%;
@@ -108,7 +128,8 @@ nav {
   margin-bottom: 15px;
   text-align: justify;
   transition: all 0.25s;
-  line-height: 0; }
+  line-height: 0;
+  align-self: center; }
 
 .card-rest img {
   width: 100%;
@@ -118,14 +139,22 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: baseline;
-  padding: 5px; }
+  padding-top: 0;
+  padding-left: 5px;
+  padding-right: 10px; }
   .cardbody h2 {
     font-size: 14px;
     font-weight: bold;
-    padding-left: 5px; }
+    padding-left: 5px;
+    padding-bottom: 5px; }
   .cardbody p {
     font-size: 12px;
     padding-left: 5px; }
+
+.fa-heart {
+  position: relative;
+  top: 10px;
+  right: 5px; }
 
 .fpage {
   width: 100%;
