--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,9 @@ body {
 a {
   text-decoration: none; }
 
+a:visited {
+  color: #000000; }
+
 ul {
   list-style: none; }
 
@@ -47,10 +50,11 @@ ul {
     .accueil__location__titre {
       font-size: 11px;
       margin-left: 10px;
-      color: #404040; }
+      color: #737373; }
   .accueil__titre {
     width: 60%;
     font-size: 14px;
+    margin-bottom: 20px;
     position: relative;
     left: 50%;
     transform: translate(-50%); }
@@ -60,6 +64,7 @@ ul {
   .accueil__soustitre {
     width: 80%;
     font-size: 10px;
+    margin-bottom: 20px;
     position: relative;
     left: 50%;
     transform: translate(-50%); }
@@ -67,29 +72,62 @@ ul {
       font-weight: normal; }
 
 .accueil__btn {
+  cursor: pointer;
   width: 50%;
   height: 40px;
-  border: 1px solid #bc95e9;
-  background-color: #ff2dc5;
-  box-shadow: 0 12px 16px rgba(0, 0, 0, 0.04);
+  color: #FFFFFF;
+  border: 0;
+  background: linear-gradient(0deg, #a16be0, 60%, #FF79DA);
+  box-shadow: 0px 5px 7px rgba(0, 0, 0, 0.2);
   border-radius: 20px/20px; }
 
 .nav {
   width: 100%; }
+  .nav__titre {
+    margin-left: 20px; }
+
+.--nav {
+  width: 100%; }
 
 .nav__btn {
+  cursor: pointer;
   width: 70%;
   height: 70px;
   margin-bottom: 20px;
   border: 0 solid #404040;
   border-radius: 15px/15px;
   text-align: center;
-  box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2);
-  background-color: #f7f7f7;
+  box-shadow: 0px 5px 7px rgba(0, 0, 0, 0.2);
+  background-color: #F2F2F2;
   position: relative;
   left: 35%;
   transform: translate(-35%);
-  z-index: -1; }
+  z-index: 1; }
+  .nav__btn:hover .nav__btn--icon {
+    opacity: 1;
+    position: relative;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    color: #9356DC;
+    opacity: 1;
+    z-index: 1;
+    transition: opacity 250ms; }
+  .nav__btn:hover::after {
+    opacity: 1; }
+  .nav__btn::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    border-radius: 15px/15px;
+    background-color: #d7c0f2;
+    opacity: 0;
+    z-index: -1;
+    transition: opacity 250ms; }
   .nav__btn span {
     margin-left: 20px;
     font-size: 14px;
@@ -105,35 +143,44 @@ ul {
     padding-top: 5px;
     border-radius: 50%;
     position: relative;
-    left: 50px;
-    bottom: 2px; }
+    left: 13%;
+    bottom: 1%;
+    z-index: 2; }
   .nav__btn--icon {
     color: gray; }
 
 .container-card {
   width: 100%;
-  background-color: white;
+  height: auto;
+  background-color: #F2F2F2;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start; }
+  .container-card__titre {
+    margin-left: 20px; }
 
 .card-rest {
   width: 90%;
-  height: 200px;
   background: #FFFFFF;
   border-radius: 20px/20px;
   box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2);
-  overflow: hidden;
   margin-bottom: 15px;
   text-align: justify;
   transition: all 0.25s;
   line-height: 0;
   align-self: center; }
+  .card-rest__image {
+    height: 200px;
+    position: relative;
+    overflow: hidden;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px; }
 
 .card-rest img {
   width: 100%;
-  height: 80%; }
+  height: 100%;
+  object-fit: cover; }
 
 .cardbody {
   display: flex;
@@ -152,6 +199,8 @@ ul {
     padding-left: 5px; }
 
 .fa-heart {
+  cursor: pointer;
+  font-weight: normal;
   position: relative;
   top: 10px;
   right: 5px; }
@@ -159,6 +208,7 @@ ul {
 .fpage {
   width: 100%;
   height: 200px;
+  overflow: hidden;
   background: #333333;
   margin-bottom: 20px;
   text-align: left;
