--- a/public/styles.scss
+++ b/public/styles.scss
@@ -1,7 +1,7 @@
 @font-face {
     font-family:'Shrikhand' ;
     src: url("css/Shrikhand/Shrikhand-Regular.ttf") format('ttf');
-    src: local('Shrikhand');
+    src: local('css/Shrikhand');
     font-weight: normal;
     font-style: normal;
     }
@@ -9,7 +9,8 @@
     font-family: 'Roboto';
     src: url("css/Roboto/Roboto-Regular.ttf") format('ttf');
     src: url("css/Roboto/Roboto-bold.ttf") format('ttf');
-    src: local('Roboto');
+    src: url("css/Roboto/Roboto-Italic.ttf") format('ttf');
+    src: local('css/Roboto');
     font-weight: normal;
     font-style: normal;
 }
@@ -36,10 +37,12 @@ ul{
 $color-primaire: #9356DC;
 $color-secondaire: #FF79DA;
 $color-tertiaire: #99E2D0;
-$polices-titres:  Shrikhand, sans-serif;
-$polices-text: Roboto, sans-serif;
+$polices-titres: 'Shrikhand';
+$polices-text: 'Roboto', sans-serif;
 $background_menu: #F2F2F2;
 $background-nav-btn: #404040;
+$border-img:  20px 20px 0 0 ;
+$border-btn: 20px 20px 20px 20px;
 @mixin boxshadow{
     box-shadow: 0px 5px 7px rgba(0, 0, 0, 0.20);
 }
@@ -74,8 +77,9 @@ $background-nav-btn: #404040;
 @mixin btn-color {  
      background:linear-gradient(0deg,lighten($color-primaire,5),60%,$color-secondaire);
 }   
-
-
+@mixin color-icon{
+    color:linear-gradient(0deg,lighten($color-primaire,5),60%,$color-secondaire);
+}
 
 
 
@@ -247,8 +251,7 @@ $background-nav-btn: #404040;
         height: 200px;
         position: relative;
         overflow: hidden;
-        border-top-left-radius: 20px;
-        border-top-right-radius:20px ;
+       border-radius: $border-img ;
     }
 }
 
@@ -279,14 +282,17 @@ $background-nav-btn: #404040;
         padding-left: 5px;
     }
     
-}
-.fa-heart
-{
+
+    .icon 
+        {
     cursor: pointer;
     font-weight:normal;
     position: relative;
+    color: $color-primaire;
     top: 10px;
-    right: 5px;
+    right: 5;
+    z-index: 1;}
+    
 }
 
 .fpage
@@ -321,3 +327,118 @@ $background-nav-btn: #404040;
         
     }
 } 
+/*---------------menu restaurants----------------------------*/
+.logo-btn
+{
+    margin-top: 20px;
+    width: 100%;
+    height: 30px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+
+    .logo{
+        position: relative;
+        right: 15%;
+        img{
+            width: 60%;
+        }
+    }
+    
+}
+.btn-return {
+    position: relative;
+    left: 5%;
+    top: 35%;
+}
+.img-rest{
+    margin-top: 20px;
+    width: 100%;  
+    img{
+        width: 100%;
+        object-fit: cover;
+        
+    }
+}
+.rest-cart
+{
+    width: 100%;
+    height: auto;
+    margin-top: -15%;
+    padding-bottom: 20px;
+    background-color:$background_menu;
+    border-radius: 30px 30px 0 0;
+    position: relative;    
+    z-index: 1;    
+
+    &__name{
+        width: 90%;
+        padding-top: 10px;
+        padding-left: 10px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: baseline;
+
+        h2{
+            font-size: 2rem;
+            font-family: 'Shrikhand';
+            font-style: italic;
+            font-weight: bold;
+            margin-left: 5px;
+        }
+        
+
+        
+    }
+}
+.restaurant{
+    text-align: center;
+    width: 100%;
+    height: auto;
+    .t-cart{
+        display: inline block;
+        width: 4vh;
+        border-bottom: 3px solid #99E2D0;
+        line-height: 0;
+        text-align: left;
+        margin:20px;
+        h2{
+            font-weight: normal;
+            font-size: 12px;
+        }
+    }
+   .btn-rest{
+            width: 90%;
+            height: 70px;
+            text-align: left;
+            background-color: #FFFFFF;
+            margin-bottom: 20px;
+            border-radius: $border-btn;
+            
+            }
+            h2{
+                font-size: 16px;
+                margin-left: 10px;
+            }
+            p{
+                margin-left: 10px;
+                font-size: 12px;
+                display: flex;
+                justify-content: space-between;
+            }
+            span{
+                font-weight: bold;
+                margin-right: 10px;
+            }
+    &--btn{
+        text-align: center;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+ 
+}
+.--fpage{
+    margin-bottom: -2%;
+}
