--- a/public/styles.scss
+++ b/public/styles.scss
@@ -81,7 +81,18 @@ $border-btn: 20px 20px 20px 20px;
     color:linear-gradient(0deg,lighten($color-primaire,5),60%,$color-secondaire);
 }
 
+@keyframes fullhaert
+{
+    0%{
+        transform: scale(0);
+        fill-opacity: 1;    
+    }
 
+    100%{
+        transform: scale(1);
+        fill-opacity: 1;
+    }
+}
 
 
 
@@ -281,19 +292,31 @@ $border-btn: 20px 20px 20px 20px;
         font-size: 12px;
         padding-left: 5px;
     }
-    
-
-    .icon 
-        {
-    cursor: pointer;
-    font-weight:normal;
-    position: relative;
-    color: $color-primaire;
-    top: 10px;
-    right: 5;
-    z-index: 1;}
-    
+    .ico{
+        margin-right: 5px;
+    }
 }
+    .ico{
+        cursor: pointer;
+        fill: $color-primaire;
+        fill-opacity: 0;
+        stroke-width: 1rem;        
+        stroke: #000000;
+        width: 1rem;
+        height: 1rem;
+        position: relative;
+        top: 10px;
+     &:active{
+         animation: fullhaert;
+         animation-iteration-count: infinite;
+         animation-fill-mode: forwards;
+         
+        
+     }
+    }
+
+   
+
 
 .fpage
 {
@@ -327,6 +350,7 @@ $border-btn: 20px 20px 20px 20px;
         
     }
 } 
+
 /*---------------menu restaurants----------------------------*/
 .logo-btn
 {
@@ -389,7 +413,11 @@ $border-btn: 20px 20px 20px 20px;
             margin-left: 5px;
         }
         
-
+        .ico{
+            position:relative;
+            top: 3px;
+            
+        }
         
     }
 }
@@ -416,6 +444,7 @@ $border-btn: 20px 20px 20px 20px;
             background-color: #FFFFFF;
             margin-bottom: 20px;
             border-radius: $border-btn;
+            line-height: 0.5;
             
             }
             h2{
@@ -425,7 +454,7 @@ $border-btn: 20px 20px 20px 20px;
             p{
                 margin-left: 10px;
                 font-size: 12px;
-                display: flex;
+                display:flex;
                 justify-content: space-between;
             }
             span{
