--- a/public/styles.scss
+++ b/public/styles.scss
@@ -85,7 +85,7 @@ $border-btn: 20px 20px 20px 20px;
 {
     0%{
         transform: scale(0);
-        fill-opacity: 1;    
+        fill-opacity: 0;  
     }
 
     100%{
@@ -298,21 +298,27 @@ $border-btn: 20px 20px 20px 20px;
 }
     .ico{
         cursor: pointer;
-        fill: $color-primaire;
+        fill:$color-primaire;
         fill-opacity: 0;
         stroke-width: 1rem;        
         stroke: #000000;
-        width: 1rem;
-        height: 1rem;
+        width: 1.5rem;
+        height: 1.5rem;
         position: relative;
         top: 10px;
-     &:active{
-         animation: fullhaert;
-         animation-iteration-count: infinite;
-         animation-fill-mode: forwards;
-         
+        &:active{
+            animation: fullhaert;
+            animation-fill-mode:  forwards;
+            animation-iteration-count: infinite;
+           
+        }
+   
+    }
+button{
+    background: none;
+    border: 0;
+    cursor: pointer;
         
-     }
     }
 
    
@@ -352,6 +358,18 @@ $border-btn: 20px 20px 20px 20px;
 } 
 
 /*---------------menu restaurants----------------------------*/
+@keyframes fadein{
+    0%{
+        transform:translatey(20px);
+        opacity: 0;
+    }
+    
+    100%{
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
 .logo-btn
 {
     margin-top: 20px;
@@ -375,7 +393,7 @@ $border-btn: 20px 20px 20px 20px;
     position: relative;
     left: 5%;
     top: 35%;
-}
+   }
 .img-rest{
     margin-top: 20px;
     width: 100%;  
@@ -437,6 +455,7 @@ $border-btn: 20px 20px 20px 20px;
             font-size: 12px;
         }
     }
+    
    .btn-rest{
             width: 90%;
             height: 70px;
@@ -445,6 +464,7 @@ $border-btn: 20px 20px 20px 20px;
             margin-bottom: 20px;
             border-radius: $border-btn;
             line-height: 0.5;
+            
             
             }
             h2{
@@ -468,6 +488,12 @@ $border-btn: 20px 20px 20px 20px;
     }
  
 }
+.--efect-btn{
+    animation-name: fadein;
+    animation-fill-mode: forwards;
+    animation-timing-function: cubic-bezier(.19, -0.06, .79, .96);
+    animation-duration: 3000ms;}
+
 .--fpage{
     margin-bottom: -2%;
 }
