--- a/public/styles.scss
+++ b/public/styles.scss
@@ -62,6 +62,24 @@ $border-btn: 20px 20px 20px 20px;
    }
     
 }
+@mixin efecthover-2 {
+    &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        border-radius:$border-btn;
+        background-color: #99E2D0;
+        opacity:0;
+        z-index: 2;
+        transform: scaleX(0);
+        transform-origin: 100%;
+        transition: all 900ms cubic-bezier(.32,0,.07,1);
+   }
+    
+}
 @mixin efecthover-i {
                   
         position: relative;
@@ -509,7 +527,8 @@ button{
         
     }
 }
-.restaurant{
+.restaurant
+{
     text-align: center;
     width: 100%;
     height: auto;
@@ -526,38 +545,86 @@ button{
         }
     }
     
-   .btn-rest{
-            width: 90%;
-            height: 70px;
-            text-align: left;
-            background-color: #FFFFFF;
-            margin-bottom: 20px;
-            border-radius: $border-btn;
-            line-height: 0.5;
-            
-            
-            }
+   
             h2{
                 font-size: 16px;
                 margin-left: 10px;
             }
-            p{
+            &__p{
                 margin-left: 10px;
-                font-size: 12px;
+                font-size: 13px;
                 display:flex;
                 justify-content: space-between;
-            }
-            span{
-                font-weight: bold;
-                margin-right: 10px;
-            }
+                align-items: baseline;
+                position: relative;
+                z-index: -1;
+                }
+            &__span{
+                    display: inline-block;
+                    text-align: center;
+                    width: 5.9vh;
+                    padding: 10px;
+                    background-color: #FFFFFF;
+                    font-weight: bold;
+                    margin-right: 10px;
+                    position: relative;
+                    z-index: 1;
+                    transition: all 900ms cubic-bezier(.32,0,.07,1);
+                }
     &--btn{
         text-align: center;
         margin-top: 20px;
         margin-bottom: 20px;
     }
- 
 }
+ 
+.btn-rest
+{
+    width: 90%;
+    height: 70px;
+    overflow: hidden;
+    text-align: left;
+    background-color: #FFFFFF;
+    margin-bottom: 20px;
+    border-radius: $border-btn;
+    line-height: 0.5;
+    position: relative;
+    z-index: 1;
+    h2{
+        font-size: 16px;
+        margin-left: 10px;}
+    &:hover{
+        .restaurant__span{
+            transform: translateX(-9vh);
+        }
+        .__check{
+            opacity: 1;
+            transform:  translateX(35.9vh) translateY(-5.7vh) rotate(360deg);
+            }
+        &::after{
+            opacity: 1;
+            transform-origin: 100%;
+            transform: scaleX(0.2)
+
+
+            } 
+        }
+    @include efecthover-2;
+}  
+svg{
+    width: 1.2rem;
+}
+.__check{
+        display: inline-block;
+        fill:white;
+        position: relative;
+        z-index: 3;
+        transform: translateX(41.5vh) translateY(-5.7vh);
+        transition: all 900ms cubic-bezier(.32,0,.07,1);
+}
+
+
+
 .--efect-btn{
     animation-name: fadein;
     animation-fill-mode: forwards;
