--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@
   font-style: normal; }
 body {
   width: 100%;
-  max-width: 600px;
   margin: 0 auto;
   padding: 0;
   box-sizing: border-box;
@@ -83,13 +82,11 @@ ul {
     transform: rotateZ(0deg); } }
 @keyframes loading {
   0% {
-    opacity: 0;
-    transform: translateX(-99999px); }
+    opacity: 0; }
   100% {
-    opacity: 1;
-    transform: translateX(0); } }
+    opacity: 1; } }
 .init {
-  opacity: 0;
+  opacity: 0.3;
   animation-name: loading;
   animation-delay: 2s;
   animation-duration: 0ms;
@@ -388,8 +385,9 @@ button {
     font-size: 16px;
     margin-left: 10px; }
   .restaurant__p {
+    width: 100%;
     margin-left: 10px;
-    font-size: 13px;
+    font-size: 0.8rem;
     display: flex;
     justify-content: space-between;
     align-items: baseline;
@@ -398,7 +396,7 @@ button {
   .restaurant__span {
     display: inline-block;
     text-align: center;
-    width: 5.9vh;
+    width: 5vh;
     padding: 10px;
     background-color: #FFFFFF;
     font-weight: bold;
@@ -423,13 +421,12 @@ button {
   position: relative;
   z-index: 1; }
   .btn-rest h2 {
-    font-size: 16px;
+    font-size: 14px;
     margin-left: 10px; }
   .btn-rest:hover .restaurant__span {
-    transform: translateX(-8.7vh); }
+    transform: translateX(-8.4vh); }
   .btn-rest:hover .__check {
-    opacity: 1;
-    transform: translateX(35.9vh) translateY(-5.7vh) rotate(360deg); }
+    transform: translateX(-220%) rotate(360deg); }
   .btn-rest:hover::after {
     opacity: 1;
     transform-origin: 100%;
@@ -454,10 +451,11 @@ svg {
 
 .__check {
   display: inline-block;
-  fill: white;
+  fill: #FFFFFF;
   position: relative;
+  bottom: 70%;
+  left: 100%;
   z-index: 3;
-  transform: translateX(41.5vh) translateY(-5.7vh);
   transition: all 900ms cubic-bezier(0.32, 0, 0.07, 1); }
 
 .--efect-btn {
