--- a/public/styles.scss
+++ b/public/styles.scss
@@ -17,7 +17,6 @@
 body
 {
     width: 100%;
-    max-width: 600px;
     margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
@@ -170,16 +169,16 @@ $border-btn: 20px 20px 20px 20px;
 @keyframes loading {
     0%{
         opacity: 0;
-        transform: translateX(-99999px);
+        
     }
     
     100%{
         opacity: 1;
-        transform: translateX(0);
+       
     }
 }
 .init{
-    opacity: 0;
+    opacity: 0.3;
     animation-name: loading;
     animation-delay: 2s;
     animation-duration: 0ms;
@@ -551,8 +550,9 @@ button{
                 margin-left: 10px;
             }
             &__p{
+                width: 100%;
                 margin-left: 10px;
-                font-size: 13px;
+                font-size: 0.8rem;
                 display:flex;
                 justify-content: space-between;
                 align-items: baseline;
@@ -562,7 +562,7 @@ button{
             &__span{
                     display: inline-block;
                     text-align: center;
-                    width: 5.9vh;
+                    width: 5vh;
                     padding: 10px;
                     background-color: #FFFFFF;
                     font-weight: bold;
@@ -591,15 +591,14 @@ button{
     position: relative;
     z-index: 1;
     h2{
-        font-size: 16px;
+        font-size: 14px;
         margin-left: 10px;}
     &:hover{
         .restaurant__span{
-            transform: translateX(-8.7vh);
+            transform: translateX(-8.4vh);
         }
         .__check{
-            opacity: 1;
-            transform:  translateX(35.9vh) translateY(-5.7vh) rotate(360deg);
+            transform:  translateX(-220%) rotate(360deg);
             }
         &::after{
             opacity: 1;
@@ -616,10 +615,11 @@ svg{
 }
 .__check{
         display: inline-block;
-        fill:white;
+        fill:#FFFFFF;
         position: relative;
+        bottom: 70%;
+        left: 100%;
         z-index: 3;
-        transform: translateX(41.5vh) translateY(-5.7vh);
         transition: all 900ms cubic-bezier(.32,0,.07,1);
 }
 
